# Alignment-experiments

./: .gitignore  HIERARCHICAL_PLANNER_ROADMAP.md  README.md  ROADMAP.md  requirements.txt  run_all_tests.py  smoke_test.py  smoke_test_tom.py  test_4d_b_matrix.py  test_jax_planner.py
Sources/: 5_observation_Tmaze.ipynb  chat_with_david_about_path_flexibility_on_whatsapp.txt  sanjeev_empathy.txt  utils.py
agents/: empathetic_agent.py  empowerment.py
analysis/: plot_empathy_sweeps.py
docs/: QUICKSTART_JAX.md  REFACTORING_NOTES.md  TOM_MIGRATION_SUMMARY.md
env/: gridworld.py
experiments/: __init__.py  exp1_flex_vs_efe.py  exp2_flex_prior.py  sim.py  sweep.py
legacy/: LEGACY_README.md  sweep.py
pymdp/: .gitignore  pyproject.toml
results/: empathy_experiments_20251208_075759.csv  empathy_experiments_20251208_082613.csv  empathy_experiments_20251208_090950.csv  empathy_experiments_20251209_164034.csv  empathy_experiments_20251209_212501.csv  empathy_experiments_20251210_161352.csv  empathy_experiments_20251210_170201.csv  empathy_experiments_20251210_172226.csv  empathy_experiments_20251210_221712.csv  empathy_experiments_20251211_153049.csv  (+18 more)
tom-main/: .gitignore  README.md  pyproject.toml
tom-main/notebooks/IWAI_2025/: task_collisionavoidance_iwai.ipynb  task_foraging_iwai.ipynb
tom-main/notebooks/experimental/: overcooked_v1_nontom.ipynb  task_cleanup.ipynb  task_foraging.ipynb
tom-main/tom/envs/: env_cleanup.py
tom-main/tom/models/: model_collisionavoidance.py  model_foraging.py  model_ocv1.py
tom-main/tom/planning/: rollout_tom.py  si_tom.py
(+109 files in other folders)
